--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,43 @@
-<section class="prompt">
-  <h1>Sign in</h1> <% if (hasMessages) { %> <section class="messages"> <% messages.forEach(function(message) { %> <p>
-      <%= message %></p> <% }); %> </section> <% } %> <form action="/login/password" method="post">
-    <section>
-      <label for="user_login_id">user_login_id</label>
-      <input id="user_login_id" name="user_login_id" type="text" autocomplete="username" required>
+<!doctype html>
+<html lang="jp">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Express • TodoMVC</title>
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/login.css">
+  </head>
+  <body>
+  <section class="prompt">
+    <h1>Sign in</h1> 
+    <a class="button google" href="/login/federated/google">Sign in with Google</a>
+    <% if (hasMessages) { %> 
+      <section class="messages"> 
+        <% messages.forEach(function(message) { %> 
+          <p><%= message %></p> 
+        <% }); %> 
+      </section> 
+    <% } %> 
+    <form action="/login/password" method="post">
+      <section>
+        <label for="user_login_id">user_login_id</label>
+        <input id="user_login_id" name="user_login_id" type="text"  autocomplete="username" required>
     </section>
-    <section>
-      <label for="current_password">Password</label>
-      <input id="current_password" name="password" type="password" autocomplete="current-password" required>
+      <section>
+        <label for="current_password">Password</label>
+        <input id="current_password" name="password" type="password"  autocomplete="current-password" required>
     </section>
-    <button type="submit">Sign in</button>
-  </form>
-  <hr>
-  <p class="help">Don't have an account? <a href="/signup">Sign up</a></p>
-</section>
+      <button type="submit">Sign in</button>
+    </form>
+    <hr>
+    <p class="help">Don't have an account? <a href="/signup">Sign up</a></p>
+  </section>
+  <footer class="info">
+    <p>Created by <a href="https://www.jaredhanson.me">Jared Hanson</a></p>
+    <p>Part of <a href="https://todomvc.com">TodoMVC</a></p>
+    <p>Authentication powered by <a href="https://www.passportjs.org">Passport</a></p>
+  </footer>
+  </body>
+</html>
+    
